# zfs-tui

./: .gitignore  AGENTS.md  Dockerfile.build  LICENSE  README.md  build-linux.ps1  build-linux.sh  pyproject.toml  zfs-tui.spec
.github/workflows/: release.yml
src/zfs_tui/: __main__.py  app.py  build.py
src/zfs_tui/controllers/: __init__.py  parser.py  ssh_ctl.py  zfs_ctl.py  zpool_ctl.py
src/zfs_tui/models/: __init__.py  dataset.py  pool.py  snapshot.py
src/zfs_tui/screens/: __init__.py  confirm_dialog.py  connection_manager.py  create_dataset.py  create_pool.py  dashboard.py  dataset_detail.py  pool_detail.py
src/zfs_tui/tcss/: app.tcss  confirm_dialog.tcss  connection_manager.tcss  create_dataset.tcss  create_pool.tcss  dashboard.tcss  dataset_detail.tcss  pool_detail.tcss
src/zfs_tui/utils/: __init__.py  config.py  sudo.py
